--- a/aurora-skyes-front/src/app/pages/home/home.component.html
+++ b/aurora-skyes-front/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="flight-search-form">
-    <form class="search-section">
+    <form [formGroup]="flightSearchForm" class="search-section">
       <div class="form-group">
         <label for="trip-type">Type de trajet</label>
-        <select id="trip-type">
+        <select formControlName="tripType" id="trip-type">
           <option value="aller-retour">Aller-retour</option>
           <option value="aller-simple">Aller-simple</option>
         </select>
@@ -11,10 +11,10 @@
 
       <div class="form-group">
         <label for="class">Départ de</label>
-        <select id="departure">
+        <select formControlName="departure" id="departure">
           <option value="">Selectionnez un aéroport</option>
           @for (item of mockAirportList; track item) {
-            <option value="">{{ item.ville }}({{ item.nom }})</option>
+            <option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
           }
         </select>
         <span class="error-message">Veuillez saisir une ville de départ</span>
@@ -22,50 +22,72 @@
 
       <div class="form-group">
         <label for="arrival">Arrivée à</label>
-        <select id="arrival">
+        <select formControlName="arrival" id="arrival">
           <option value="">Selectionnez un aéroport</option>
           @for (item of mockAirportList; track item) {
-            <option value="">{{ item.ville }}({{ item.nom }})</option>
+            <option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
           }
         </select></div>
 
       <div class="form-group">
         <label>Dates de voyage</label>
         <div class="date-range">
-          <input placeholder="Départ" type="date"/>
-          <input placeholder="Retour" type="date"/>
+          <input formControlName="departureDate" placeholder="Départ" type="date"/>
+          <input formControlName="returnDate" placeholder="Retour" type="date"/>
         </div>
       </div>
 
       <div class="form-group">
         <label for="passengers">Passagers</label>
-        <input id="passengers" min="1" type="number" value="1"/>
+        <input formControlName="passengers" id="passengers" min="1" type="number" value="1"/>
       </div>
 
       <div class="form-group">
         <label for="class">Classe</label>
-        <select id="class">
+        <select formControlName="class" id="class">
           <option value="economy">Economy</option>
           <option value="business">Business</option>
           <option value="first">First</option>
         </select>
       </div>
 
-      <button class="search-button" type="submit">Rechercher les vols</button>
+      <button (click)="onSearch()" class="search-button" type="button">Rechercher les vols</button>
     </form>
   </div>
 
-  <div class="destination-list">
-
-    @for (item of flightList; track item) {
-      <div class="destination-item">
-        <div class="destination-info">
-          <h4>{{ item.to }} ➡️ {{ item.from }}</h4>
-          <p>{{ item.departure | date:'short' }} 🕰️ {{ item.arrival | date:'short' }}</p>
-          <p class="price">100€</p>
-        </div>
+  @if (search) {
+    <div class="destination-list">
+      <div class="flight-section">
+        <h3>Vol aller</h3>
+        @if (outboundFlights.length == 0) {
+          <p>Pas de vol allé trouvé pour votre recherche</p>
+        }
+        @for (flight of outboundFlights; track outboundFlights) {
+          <div class="destination-item">
+            <div class="destination-info">
+              <h4>{{ flight.aeroportDepart }} ➡️ {{ flight.aeroportArrivee }}</h4>
+              <p>{{ flight.dateDepart | date:'short' }} 🕰️ {{ flight.dateArrive | date:'short' }}</p>
+              <p class="price">100€</p>
+              <button type="button">Réserver</button>
+            </div>
+          </div>
+        }
       </div>
-    }
-  </div>
+      <div class="flight-section">
+        <h3>Vol retour</h3>
+        @if (returnFlights.length == 0) {
+          <p>Pas de vol retour trouvé pour votre recherche</p>
+        }
+        @for (flight of returnFlights; track returnFlights) {
+          <div class="destination-item">
+            <div class="destination-info"><h4>{{ flight.aeroportDepart }} ➡️ {{ flight.aeroportArrivee }}</h4>
+              <p>{{ flight.dateDepart | date:'short' }} 🕰️ {{ flight.dateArrive | date:'short' }}</p>
+              <p class="price">100€</p>
+              <button type="button">Réserver</button>
+            </div>
+          </div>
+        }
+      </div>
+    </div>
+  }
 </div>
-
