--- a/aurora-skyes-front/src/app/pages/home/home.component.scss
+++ b/aurora-skyes-front/src/app/pages/home/home.component.scss
@@ -59,16 +59,12 @@
 .search-button {
   grid-column: span 3;
   padding: 10px 20px;
-  background: #007bff;
-  color: white;
+  //background: #007bff;
+  //color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
-}
-
-.search-button:hover {
-  background: #0056b3;
 }
 
 .destination-list {
@@ -107,7 +103,22 @@
 
 .destination-info .price {
   margin: 5px 0 0;
-  color: #007bff;
   font-weight: bold;
   font-size: 14px;
+}
+
+button {
+  border-radius: 20px;
+  border: none;
+  padding: 10px 20px;
+  background: #007bff;
+  color: white;
+}
+
+.flight-section {
+  margin: 20px 0;
+
+  h3, p {
+    margin: 20px;
+  }
 }
