--- a/aurora-skyes-front/src/app/pages/home/home.component.html
+++ b/aurora-skyes-front/src/app/pages/home/home.component.html
@@ -56,8 +56,8 @@
     </form>
   </div>
 
-  @if (search) {
-    <div class="destination-list">
+  <div class="destination-list">
+    @if (search) {
       <div class="flight-section">
         <h3>Vol aller</h3>
         @if (outboundFlights.length == 0) {
@@ -81,7 +81,8 @@
         }
         @for (flight of returnFlights; track returnFlights) {
           <div class="destination-item">
-            <div class="destination-info"><h4>{{ flight.aeroportDepart }} ➡️ {{ flight.aeroportArrivee }}</h4>
+            <div class="destination-info">
+              <h4>{{ flight.aeroportDepart }} ➡️ {{ flight.aeroportArrivee }}</h4>
               <p>{{ flight.dateDepart | date:'short' }} 🕰️ {{ flight.dateArrive | date:'short' }}</p>
               <p class="price">100€</p>
               <button type="button">Réserver</button>
@@ -89,6 +90,20 @@
           </div>
         }
       </div>
-    </div>
-  }
+    } @else {
+      <div class="flight-section">
+        @for (flight of mockFlightList; track mockFlightList) {
+          <div class="destination-item">
+            <div class="destination-info">
+              <h4>{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
+                ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</h4>
+              <p>{{ flight.dateDepart | date:'short' }} 🕰️ {{ flight.dateArrive | date:'short' }}</p>
+              <p class="price">100€</p>
+              <button type="button">Réserver</button>
+            </div>
+          </div>
+        }
+      </div>
+    }
+  </div>
 </div>
