Gestion des dates et erreur

--- a/aurora-skyes-front/src/app/pages/home/home.component.html
+++ b/aurora-skyes-front/src/app/pages/home/home.component.html
@@ -53,6 +53,10 @@
       </div>
 
       <button (click)="onSearch()" class="search-button" type="button">Rechercher les vols</button>
+
+      @if (error != '') {
+        <p class="error">{{ error }}</p>
+      }
     </form>
   </div>
 
