--- a/aurora-skyes-front/src/app/pages/home/home.component.scss
+++ b/aurora-skyes-front/src/app/pages/home/home.component.scss
@@ -63,20 +63,21 @@
   }
 
   .destination-list {
-    width: 80%;
-    max-width: 900px;
-    margin: 20px auto;
+
+    width: 60%;
+    height: max-content;
+    margin: 40px auto;
     border: 1px solid #ddd;
     border-radius: 8px;
-    overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 40px;
   }
 
   .destination-item {
     display: flex;
     align-items: center;
-    padding: 15px;
     border-bottom: 1px solid #ddd;
+    margin: 10px 0;
   }
 
   .destination-item:last-child {
@@ -88,6 +89,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 10px 0;
   }
 
   .destination-info h3 {
@@ -114,7 +116,7 @@
     margin: 20px 0;
 
     h3, p {
-      margin: 20px;
+      margin: 10px 20px;
     }
   }
 }
