--- a/aurora-skyes-front/src/app/pages/home/home.component.html
+++ b/aurora-skyes-front/src/app/pages/home/home.component.html
@@ -7,14 +7,13 @@
         <label for="trip-type">Type de trajet</label>
         <select formControlName="tripType" id="trip-type">
           <option value="aller-retour">Aller-retour</option>
-          <option value="aller-simple">Aller-simple</option>
         </select>
       </div>
 
       <div class="form-group">
         <label for="class">Départ de</label>
         <select formControlName="departure" id="departure">
-          <option value="">Selectionnez un aéroport</option>
+          <option disabled selected value="">Veuillez sélectionner un aéroport</option>
           @for (item of mockAirportList; track item) {
             <option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
           }
@@ -24,7 +23,7 @@
       <div class="form-group">
         <label for="arrival">Arrivée à</label>
         <select formControlName="arrival" id="arrival">
-          <option value="">Selectionnez un aéroport</option>
+          <option disabled selected value="">Veuillez sélectionner un aéroport</option>
           @for (item of mockAirportList; track item) {
             <option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
           }
@@ -46,9 +45,8 @@
       <div class="form-group">
         <label for="class">Classe</label>
         <select formControlName="class" id="class">
-          <option value="economy">Economy</option>
-          <option value="business">Business</option>
-          <option value="first">First</option>
+          <option value="economy">Economie</option>
+          <option value="first">Première</option>
         </select>
       </div>
 
