modifications et creation de guards

--- a/aurora-skyes-front/src/app/page/login/login.component.html
+++ b/aurora-skyes-front/src/app/page/login/login.component.html
@@ -59,9 +59,17 @@
   </form>
 
   <!-- Lien "Forgot Password ?" -->
-  <div class="col-md-6">
-    <a class="text-dark" href="/forgot-password" style="text-decoration: none">
-      Forgot Password ?
-    </a>
+  <div class="row mt-3">
+    <div class="col-md-6">
+      <a class="text-dark" href="/forgot-password" style="text-decoration: none">
+        Forgot Password ?
+      </a>
+    </div>
+    <!-- Lien "S'inscrire" -->
+    <div class="col-md-6 text-end">
+      <a class="text-dark" href="/register" style="text-decoration: none">
+        S'inscrire
+      </a>
+    </div>
   </div>
 </div>
