--- a/aurora-skyes-front/src/app/page/register/register.component.html
+++ b/aurora-skyes-front/src/app/page/register/register.component.html
@@ -29,6 +29,16 @@
               />
             </div>
             <div class="mb-3">
+              <label class="form-label" for="password">Password</label>
+              <input
+                [(ngModel)]="password"
+                class="form-control"
+                id="password"
+                name="password"
+                type="password"
+              />
+            </div>
+            <div class="mb-3">
               <label class="form-label" for="confirmPassword"
               >Confirm Password</label
               >
