--- a/aurora-skyes-front/src/app/pages/authentification/login/login.component.scss
+++ b/aurora-skyes-front/src/app/pages/authentification/login/login.component.scss
@@ -1,7 +1,7 @@
 .login-container {
-  max-width: 400px;
+  width: 30%;
   margin: 50px auto;
-  padding: 20px;
+  padding: 20px 50px;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -54,4 +54,17 @@ input {
 .register-link {
   text-align: center;
   margin-top: 15px;
+}
+
+.link {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
