--- a/aurora-skyes-front/src/app/shared/header/header.component.html
+++ b/aurora-skyes-front/src/app/shared/header/header.component.html
@@ -1,4 +1,10 @@
 <header>
-  <img src="https://img.icons8.com/?size=100&id=o21PmwHBoj5l&format=png&color=000000">
-  <h1>Aurora Skyes</h1>
+  <div class="logo">
+    <img src="https://img.icons8.com/?size=100&id=o21PmwHBoj5l&format=png&color=000000">
+    <h1>Aurora Skyes</h1>
+  </div>
+
+  <div class="deconnexion">
+    <button (click)="deconnexion()">Deconnexion</button>
+  </div>
 </header>
