--- a/aurora-skyes-front/src/app/shared/header/header.component.scss
+++ b/aurora-skyes-front/src/app/shared/header/header.component.scss
@@ -2,15 +2,35 @@ header {
   height: 70px;
   background: #007bff;
   display: flex;
-  justify-content: center;
   align-items: center;
   color: white;
   font-family: "Arial Narrow Bold", sans-serif;
   margin-bottom: 20px;
   box-shadow: rgba(149, 157, 165, 0.37) 0px 8px 24px;
 
-  img {
-    width: 55px;
-    margin-right: 15px;
+  .logo {
+    flex: 1;
+    margin-left: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      width: 55px;
+      margin-right: 15px;
+    }
+
+  }
+
+  .deconnexion {
+    width: 150px;
+
+    button {
+      border-radius: 20px;
+      border: none;
+      padding: 10px 20px;
+      background: white;
+      color: #007bff;
+    }
   }
 }
