Réajustement visuel toast

--- a/aurora-skyes-front/src/app/shared/toast/toast.component.html
+++ b/aurora-skyes-front/src/app/shared/toast/toast.component.html
@@ -1,7 +1,9 @@
-@for (toast of toasts; track toasts) {
-  <div class="toast-container">
-    <div (click)="removeToast(toast)" [ngClass]="toast.type" class="toast">
-      {{ toast.message }}
+<div class="container">
+  @for (toast of toasts; track toasts) {
+    <div class="toast-container">
+      <div (click)="removeToast(toast)" [ngClass]="toast.type" class="toast">
+        {{ toast.message }}
+      </div>
     </div>
-  </div>
-}
+  }
+</div>
