--- a/aurora-skyes-front/src/app/shared/toast/toast.component.scss
+++ b/aurora-skyes-front/src/app/shared/toast/toast.component.scss
@@ -1,35 +1,34 @@
-.toast-container {
-  position: fixed;
-  top: 20px;
-  right: 20px;
+.container {
   display: flex;
-  flex-direction: column;
-  gap: 10px;
-  z-index: 1000;
-}
+  justify-content: center;
 
-.toast {
-  padding: 10px 20px;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 14px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
+  .toast-container {
+    position: fixed;
+    top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    z-index: 1000;
 
-  &.success {
-    background-color: #28a745;
-  }
+    .toast {
+      padding: 10px 20px;
+      border-radius: 5px;
+      color: #fff;
+      font-size: 14px;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
 
-  &.error {
-    background-color: #dc3545;
-  }
+      &.success {
+        background-color: #28a745;
+      }
 
-  &.info {
-    background-color: #007bff;
-  }
+      &.error {
+        background-color: #dc3545;
+      }
 
-  &.warning {
-    background-color: #ffc107;
-    color: #212529;
+      &.info {
+        background-color: #007bff;
+      }
+    }
   }
 }
