--- a/aurora-skyes-front/src/app/pages/authentification/login/login.component.html
+++ b/aurora-skyes-front/src/app/pages/authentification/login/login.component.html
@@ -44,7 +44,7 @@
       <!--      </a>-->
       <!--    </div>-->
       <div class="col-md-12 text-end link">
-        <a class="text-dark" href="/register" style="text-decoration: none">
+        <a class="text-dark" href="/register">
           S'inscrire
         </a>
       </div>
