--- a/aurora-skyes-front/src/app/pages/authentification/register/register.component.html
+++ b/aurora-skyes-front/src/app/pages/authentification/register/register.component.html
@@ -1,69 +1,61 @@
-<div class="container-fluid">
-  <div class="row mt-5">
-    <div class="col"></div>
-    <div class="col-4">
-      <div class="card shadow">
-        <div class="card-body">
-          <form>
-            <div class="mb-3">
-              <h4 class="text-dark text-muted">Register</h4>
-            </div>
-            <div class="mb-3">
-              <label class="form-label" for="username">Username </label>
-              <input
-                [(ngModel)]="username"
-                class="form-control"
-                id="username"
-                name="username"
-                type="text"
-              />
-            </div>
-            <div class="mb-3">
-              <label class="form-label" for="email">Email </label>
-              <input
-                [(ngModel)]="email"
-                class="form-control"
-                id="email"
-                name="email"
-                type="email"
-              />
-            </div>
-            <div class="mb-3">
-              <label class="form-label" for="password">Password</label>
-              <input
-                [(ngModel)]="password"
-                class="form-control"
-                id="password"
-                name="password"
-                type="password"
-              />
-            </div>
-            <div class="mb-3">
-              <label class="form-label" for="confirmPassword"
-              >Confirm Password</label
-              >
-              <input
-                [(ngModel)]="confirmPassword"
-                class="form-control"
-                id="confirmPassword"
-                name="confirmPassword"
-                type="password"
-              />
-            </div>
-            <button (click)="register()" class="btn btn-info" type="button">
-              Register
-            </button>
-            <div class="row">
-              <div class="col-md-6">
-                <a href="/login" style="text-decoration: none"
-                >Have an Account ? <span class="text-danger">Login</span></a
-                >
-              </div>
-            </div>
-          </form>
+<div class="container">
+  <div class="login-container">
+    <h2>Inscription</h2>
+
+    <form>
+      <div class="form-group">
+        <label for="username">Username </label>
+        <input
+          [(ngModel)]="username"
+          class="form-control"
+          id="username"
+          name="username"
+          type="text"
+        />
+      </div>
+      <div class="form-group">
+        <label for="email">Email </label>
+        <input
+          [(ngModel)]="email"
+          class="form-control"
+          id="email"
+          name="email"
+          type="email"
+        />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          [(ngModel)]="password"
+          class="form-control"
+          id="password"
+          name="password"
+          type="password"
+        />
+      </div>
+      <div class="form-group">
+        <label for="confirmPassword"
+        >Confirm Password</label
+        >
+        <input
+          [(ngModel)]="confirmPassword"
+          class="form-control"
+          id="confirmPassword"
+          name="confirmPassword"
+          type="password"
+        />
+      </div>
+      <button (click)="register()" class="btn btn-primary" type="button">
+        S'inscrire
+      </button>
+
+      <div class="row mt-3">
+        <div class="col-md-12 text-end link">
+          <a class="text-dark" href="/login">
+            Déjà un compte ? Connectez-vous
+          </a>
         </div>
       </div>
-    </div>
-    <div class="col"></div>
+    </form>
   </div>
 </div>
