--- a/aurora-skyes-front/src/app/pages/home/home.component.scss
+++ b/aurora-skyes-front/src/app/pages/home/home.component.scss
@@ -68,10 +68,9 @@
   }
 
   .destination-list {
-
     width: 60%;
     height: max-content;
-    margin: 40px auto;
+    margin: 20px auto 60px auto;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -95,18 +94,16 @@
     justify-content: space-between;
     align-items: center;
     margin: 10px 0;
+
+    p {
+      width: 25%;
+    }
   }
 
   .destination-info h3 {
     margin: 0;
     font-size: 18px;
     color: #333;
-  }
-
-  .destination-info .price {
-    margin: 5px 0 0;
-    font-weight: bold;
-    font-size: 14px;
   }
 
   button {
