--- a/aurora-skyes-front/src/app/pages/authentification/login/login.component.scss
+++ b/aurora-skyes-front/src/app/pages/authentification/login/login.component.scss
@@ -1,3 +1,12 @@
+.background {
+  background-image: url('https://images.unsplash.com/photo-1428908728789-d2de25dbd4e2?ixlib=rb-4.0.3');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+
 .login-container {
   width: 30%;
   margin: 50px auto;
@@ -6,6 +15,7 @@
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
+  background: rgba(246, 246, 246, 0.69);
 }
 
 h2 {
@@ -63,7 +73,7 @@ input {
   a {
     color: #007bff;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 15px;
   }
 
   a:hover {
