--- a/aurora-skyes-front/src/app/pages/authentification/register/register.component.scss
+++ b/aurora-skyes-front/src/app/pages/authentification/register/register.component.scss
@@ -24,7 +24,7 @@ h2 {
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 label {
@@ -44,6 +44,7 @@ input {
   color: red;
   font-size: 0.9em;
   margin-top: 5px;
+  height: 15px;
 }
 
 .btn {
@@ -55,8 +56,8 @@ input {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-top: 20px;
   font-size: 15px;
-  margin-top: 40px;
 }
 
 .btn:disabled {
