--- a/aurora-skyes-front/src/app/pages/home/home.component.html
+++ b/aurora-skyes-front/src/app/pages/home/home.component.html
@@ -30,8 +30,8 @@
         </select></div>
 
       <div class="form-group">
-        <label>Dates de voyage</label>
-        <div class="date-range">
+        <label for="date">Dates de voyage</label>
+        <div class="date-range" id="date">
           <input formControlName="departureDate" placeholder="Départ" type="date"/>
           <input formControlName="returnDate" placeholder="Retour" type="date"/>
         </div>
@@ -70,10 +70,11 @@
         @for (flight of outboundFlights; track outboundFlights) {
           <div class="destination-item">
             <div class="destination-info">
-              <p>{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
+              <p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
                 ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
-              <p>{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
-              <p class="price">{{ flight.prix }}€</p>
+              <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
+              <p class="tag">{{ flightSearchForm.controls.class.value == 'economy' ? 'Economie' : 'Business' }}</p>
+              <p class="short-text">{{ flight.prix }}€/personne</p>
               <button type="button" (click)="selectFlight(flight)">Réserver</button>
             </div>
           </div>
@@ -88,10 +89,11 @@
         @for (flight of returnFlights; track returnFlights) {
           <div class="destination-item">
             <div class="destination-info">
-              <p>{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
+              <p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
                 ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
-              <p>{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
-              <p class="price">{{ flight.prix }}€</p>
+              <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
+              <p class="tag">{{ flightSearchForm.controls.class.value == 'economy' ? 'Economie' : 'Business' }}</p>
+              <p class="short-text">{{ flight.prix }}€/personne</p>
               <button type="button" (click)="selectFlight(flight)">Réserver</button>
             </div>
           </div>
@@ -103,10 +105,11 @@
         @for (flight of flightList; track flightList) {
           <div class="destination-item">
             <div class="destination-info">
-              <p>{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
+              <p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
                 ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
-              <p>{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
-              <p>{{ flight.prix }}€/personne</p>
+              <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
+              <p class="tag">{{ flightSearchForm.controls.class.value == 'economy' ? 'Economie' : 'Business' }}</p>
+              <p class="short-text">{{ flight.prix }}€/personne</p>
               <button type="button" (click)="selectFlight(flight)">Réserver</button>
             </div>
           </div>
