--- a/aurora-skyes-front/src/app/pages/home/home.component.scss
+++ b/aurora-skyes-front/src/app/pages/home/home.component.scss
@@ -94,10 +94,6 @@
     justify-content: space-between;
     align-items: center;
     margin: 10px 0;
-
-    p {
-      width: 25%;
-    }
   }
 
   .destination-info h3 {
@@ -120,5 +116,22 @@
     h3, p {
       margin: 10px 20px;
     }
+  }
+
+  .tag {
+    background: rgba(0, 123, 255, 0.31);
+    color: #007bff;
+    width: min-content;
+    padding: 4px 8px;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  .long-text {
+    width: 25%;
+  }
+
+  .short-text {
+    width: 15%;
   }
 }
