--- a/aurora-skyes-front/src/app/pages/home/home.component.html
+++ b/aurora-skyes-front/src/app/pages/home/home.component.html
@@ -74,7 +74,7 @@
                 ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
               <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
               <p class="tag">{{ flightSearchForm.controls.class.value == 'economy' ? 'Economie' : 'Business' }}</p>
-              <p class="short-text">{{ flight.prix }}€/personne</p>
+              <p class="short-text">{{ flight.prix }}/personne</p>
               <button type="button" (click)="selectFlight(flight)">Réserver</button>
             </div>
           </div>
@@ -93,7 +93,7 @@
                 ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
               <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
               <p class="tag">{{ flightSearchForm.controls.class.value == 'economy' ? 'Economie' : 'Business' }}</p>
-              <p class="short-text">{{ flight.prix }}€/personne</p>
+              <p class="short-text">{{ flight.prix }}/personne</p>
               <button type="button" (click)="selectFlight(flight)">Réserver</button>
             </div>
           </div>
@@ -109,7 +109,7 @@
                 ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
               <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
               <p class="tag">{{ flightSearchForm.controls.class.value == 'economy' ? 'Economie' : 'Business' }}</p>
-              <p class="short-text">{{ flight.prix }}€/personne</p>
+              <p class="short-text">{{ flight.prix }}/personne</p>
               <button type="button" (click)="selectFlight(flight)">Réserver</button>
             </div>
           </div>
