--- a/aurora-skyes-front/src/app/pages/home/home.component.scss
+++ b/aurora-skyes-front/src/app/pages/home/home.component.scss
@@ -134,4 +134,13 @@
   .short-text {
     width: 15%;
   }
+
+  .flex {
+    display: flex;
+    gap: 10px;
+
+    .form-group {
+      width: 50%;
+    }
+  }
 }
